--- a/doma/Views/Cart/history.cshtml
+++ b/doma/Views/Cart/history.cshtml
@@ -15,7 +15,7 @@
                     <div class="box-header with-border">
                         <h4 class="box-title">
                             <a data-toggle="collapse" data-parent="#accordion" href="#@item.ID" aria-expanded="false" class="collapsed">
-                               Mã: @item.ID. Ngày mua: @item.NgayTao
+                               [Mã: @item.ID] Ngày mua: @item.NgayTao
                             </a>
                         </h4>
                     </div>
