--- a/doma/Views/Shared/_Layout.cshtml
+++ b/doma/Views/Shared/_Layout.cshtml
@@ -53,7 +53,17 @@
 </head>
 <body class="skin-blue sidebar-collapse" ng-app="main_app">
     <div class="wrapper">
+        <div onclick="redirectgiohang()" role="button" style=" right: 5px; bottom: 60px; position: fixed; border-radius: 5px 5px 5px 5px; padding: 10px 15px; font-size: 16px; z-index: 99999; cursor: pointer; box-shadow: rgba(0, 0, 0, 0.0980392) 0px 1px 3px; background: rgb(60, 141, 188);">
+            <a style=" color: white;">
+                <i class="fa fa-shopping-cart"></i>
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </a>
+        </div>
 
+      
         @Html.Partial("_header_menu")
 
         <div class="content-wrapper row">
@@ -65,6 +75,8 @@
                 </div>
             </div><!-- /.content-wrapper -->
             <div class="col-md-1"></div>
+
+
         </div>
 
         @Html.Partial("_footer")
@@ -74,6 +86,9 @@
     
     <script>
         $.widget.bridge('uibutton', $.ui.button);
+        function redirectgiohang() {
+            window.location.href = "../../Cart";
+        }
     </script>
     <!-- Morris.js charts -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
