--- a/doma/Views/admin/createheaditem.cshtml
+++ b/doma/Views/admin/createheaditem.cshtml
@@ -17,7 +17,7 @@
     </div>
     <div class="box-body">
         <div class="form-group">
-            <label class="control-label col-md-2">Link hình ảnh</label>
+            <label class="control-label col-md-2">Link hình ảnh (750 * 420 cho ảnh chính, 90 * 70 cho ảnh nhỏ)</label>
             <div class="col-md-10">
                 @Html.TextBoxFor(model => model.image, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.image)
