--- a/doma/Views/Shared/_header_menu.cshtml
+++ b/doma/Views/Shared/_header_menu.cshtml
@@ -8,17 +8,15 @@
         user = db.AspNetUsers.SingleOrDefault(t => t.Id == userid);
     }
 }
-<header class="main-header">
+<header class="main-header" ng-controller="cart_controller as controller">
     <!-- Logo -->
     <a href="../../Home" class="logo"><b>Admin</b>LTE</a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top" role="navigation">
-
-
         <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
                 <!-- Messages: style can be found in dropdown.less-->
-                <li class="dropdown messages-menu" ng-controller="cart_controller as controller">
+                <li class="dropdown messages-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" ng-click="init()">
                         <i class="fa fa-shopping-cart"></i>
                         <span class="label label-success">{{products.length}}</span>
@@ -72,11 +70,11 @@
 
                             @if (User.IsInRole("Admin"))
                             {
-                                <li class="user-body">
-                                    <div class="col-xs-12 text-center">
-                                        <a href="../../admin" class="btn btn-default btn-flat">Quản lý website</a>
-                                    </div>
-                                </li>
+                            <li class="user-body">
+                                <div class="col-xs-12 text-center">
+                                    <a href="../../admin" class="btn btn-default btn-flat">Quản lý website</a>
+                                </div>
+                            </li>
 
                             }
                             <!-- Menu Footer-->
@@ -87,8 +85,8 @@
                                 <div class="pull-right">
                                     @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
                                     {
-                                        @Html.AntiForgeryToken()
-                                        <a href="javascript:document.getElementById('logoutForm').submit()" class="btn btn-default btn-flat">Đăng xuất</a>
+                                    @Html.AntiForgeryToken()
+                                    <a href="javascript:document.getElementById('logoutForm').submit()" class="btn btn-default btn-flat">Đăng xuất</a>
                                     }
                                 </div>
                             </li>
@@ -125,6 +123,14 @@
             </ul>
         </div>
     </nav>
+
+    <div onclick="redirectgiohang()" role="button" style=" right: 5px; bottom: 60px; position: fixed; border-radius: 5px 5px 5px 5px; padding: 10px 15px; font-size: 16px; z-index: 99999; cursor: pointer; box-shadow: rgba(0, 0, 0, 0.0980392) 0px 1px 3px; background: rgb(60, 141, 188);">
+        <a style=" color: white;">
+            <i class="fa fa-shopping-cart"></i>
+            <span class="sr-only">Toggle navigation</span>
+            <strong style="color:white;">{{products.length}}</strong>
+        </a>
+    </div>
 </header>
 <script src="~/scripts/my_js/cart_controller.js"></script>
 
