--- a/doma/Views/Account/Login.cshtml
+++ b/doma/Views/Account/Login.cshtml
@@ -4,15 +4,15 @@
     <div class="col-lg-3"></div>
     <div class="col-lg-6">
         <section id="loginForm">
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-            {
-                <div class="box box-info">
-                    <div class="box-header">
-                        <h3>Đăng nhập</h3>
-                    </div>
+
+            <div class="box box-info">
+                <div class="box-header">
+                    <h3>Đăng nhập</h3>
+                </div>
+                @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                {
                     <div class="box-body">
-                        @Html.AntiForgeryToken()
-                        @Html.ValidationSummary(true)
+
                         <div class="form-group">
                             @Html.LabelFor(m => m.UserName, new { @class = "col-md-3 control-label" })
                             <div class="col-md-9">
@@ -36,13 +36,20 @@
                             </div>
                         </div>
                     </div>
-                    <div class="box-footer clearfix">
-                        <input type="submit" value="Đăng nhập" class="btn btn-primary" style="float:right;"/>
 
+
+
+                    <div class="box-footer clearfix">
+                        <input type="submit" value="Đăng nhập" class="btn btn-primary" style="float:right;" />
                         <a class="btn btn-success" href="../../Account/Register" style="float:left;">Đăng ký</a>
                     </div>
+
+                }
+                <div class="box-footer clearfix">
+                    Đăng nhập bằng:
+                    @Html.Partial("_ExternalLoginsListPartial", new { Action = "ExternalLogin", ReturnUrl = ViewBag.ReturnUrl })
                 </div>
-            }
+            </div>
         </section>
     </div>
     <div class="col-lg-3"></div>
